crates/cli/tests/snapshots/redundant_if_bool__fix_1b42ef943787da30fe4bcc27b508a2f10971709ffe064efc486b2b1f2bab4a6d.snap
---
source: crates/cli/tests/redundant_if_bool.rs
expression: "\"if cond then false else true\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-if cond then false else true
+!cond
