crates/cli/tests/snapshots/redundant_if_bool__fix_f007d273a4d79664110b22f4bf5c5288a91f637186b5250c05b580d92ff48a9a.snap
---
source: crates/cli/tests/redundant_if_bool.rs
expression: "\"if cond then true else false\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-if cond then true else false
+cond
