crates/cli/tests/snapshots/redundant_if_bool__lint_1b42ef943787da30fe4bcc27b508a2f10971709ffe064efc486b2b1f2bab4a6d.snap
---
source: crates/cli/tests/redundant_if_bool.rs
expression: "\"if cond then false else true\""
---
[27] Warning: Redundant `if` expression with boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ if cond then false else true
   │ ──────────────┬─────────────  
   │               ╰─────────────── Use !cond instead of if cond then false else true
───╯
