crates/cli/tests/snapshots/redundant_if_bool__lint_f007d273a4d79664110b22f4bf5c5288a91f637186b5250c05b580d92ff48a9a.snap
---
source: crates/cli/tests/redundant_if_bool.rs
expression: "\"if cond then true else false\""
---
[27] Warning: Redundant `if` expression with boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ if cond then true else false
   │ ──────────────┬─────────────  
   │               ╰─────────────── Use the condition directly instead of if cond then true else false
───╯
